--- a/templates/services.html
+++ b/templates/services.html
@@ -16,19 +16,22 @@
 
     </head>
     <body id="page-top">
-        <!-- Navigation-->
+ <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
+                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto my-2 my-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-aboutus' %}">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-services' %}">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-portfolio' %}">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-contactus' %}">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-home' %}">Home</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
-        <h1 class="text-white font-weight-bold">Here we provide affordable services at good quality.</h1>
-                        <hr class="divider" />
-                   <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Our services are highly recommended by numerous customers.These customers have found satisfaction to the services we provided.
-                        We highly regarded as the number .1 in the states on customer satisfaction guarantee. </p>
-                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
-                   </div>
-
     <!-- Services-->
         <section class="page-section" id="services">
             <div class="container px-4 px-lg-5">
