--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -24,17 +24,18 @@
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- Navigation-->
+  <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="aboutus">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="login">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contactus">Contact</a></li>
+                       <li class="nav-item"><a class="nav-link" href="{% url 'my-aboutus' %}">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-services' %}">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-portfolio' %}">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-contactus' %}">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-home' %}">Home</a></li>
                     </ul>
                 </div>
             </div>
