--- a/templates/index.html
+++ b/templates/index.html
@@ -29,10 +29,11 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                         <li class="nav-item"><a class="nav-link" href="aboutus">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="login">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contactus">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-aboutus' %}">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-services' %}">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-portfolio' %}">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-contactus' %}">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-home' %}">Home</a></li>
                     </ul>
                 </div>
             </div>
