--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -16,13 +16,28 @@
 
 <img src="{% static 'assets/img/pexels-bich-tran-2481177.jpg' %}" alt="" height="800" width="1000">
 </div>
-
+      <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+            <div class="container px-4 px-lg-5">
+{#                <a class="navbar-brand" href="page-top">Start Bootstrap</a>#}
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto my-2 my-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-aboutus' %}">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-services' %}">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-portfolio' %}">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-contactus' %}">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'my-home' %}">Home</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
  <!-- Portfolio-->
         <div id="portfolio">
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
+                        <a class="portfolio-box" href="{% static 'assets/img/portfolio/fullsize/1.jpg '%}" title="Project Name">
                             <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/1.jpg' %}" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
@@ -31,7 +46,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
+                        <a class="portfolio-box" href="{% static 'assets/img/portfolio/fullsize/2.jpg'%}" title="Project Name">
                             <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/2.jpg' %}" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
@@ -40,7 +55,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project Name">
+                        <a class="portfolio-box" href="{% static 'assets/img/portfolio/fullsize/3.jpg'%}" title="Project Name">
                             <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/3.jpg' %}" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
@@ -49,8 +64,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Project Name">
-                            <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/4.jpg' %}"alt="..." />
+                        <a class="portfolio-box" href="{% static 'assets/img/portfolio/fullsize/4.jpg'%}" title="Project Name">
+                            <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/4.jpg' %}" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
@@ -58,7 +73,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
+                        <a class="portfolio-box" href="{% static 'assets/img/portfolio/fullsize/5.jpg'%}" title="Project Name">
                             <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/5.jpg' %}" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
@@ -67,7 +82,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Project Name">
+                        <a class="portfolio-box" href="{% static 'assets/img/portfolio/fullsize/6.jpg'%}" title="Project Name">
                             <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/6.jpg' %}" alt="..." />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50">Category</div>
